sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: ')' expected but 'for' found.
  	 for(i<-getNombreValeurs()-2 to 0 by -1){
         ^