sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut = 0
  var fin = getNombreValeurs()-2
  var echanges = false
  do{
     echanges = true
     for(i<-debut to fin{
    	 if(!plusPetit(i,i+1)){
      	echange(i,i+1)
        echanges = false
    	 }
  	 }
     fin = fin -1
  	 for(i<-getNombreValeurs()-2 to 0 by -1){
    	 if(!plusPetit(i,i+1)){
      	echange(i,i+1)
        echanges = false
    	 }
  	 }
     debut = debut + 1
  }while(!echanges)
}